Fix search button overflow on small screens

--- a/1. Modern CSS/Task/index.css
+++ b/1. Modern CSS/Task/index.css
@@ -14,10 +14,11 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
+  width: 100vw;
 }
 
 body {
-  width: auto;
+  width: 100%;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   display: flex;
@@ -67,8 +68,11 @@ main {
   border: 2px solid var(--search-color);
   background-color: var(--search-color);
   border-radius: var(--search-border-radius);
-  height: 2.5em;
+  /* height: 2.5em; */
+  width: 100%;
   align-items: center;
+  /* box-sizing: border-box; */
+  /* padding-right: calc(48px * 0.7); */
 }
 
 #search-box > :nth-child(1) {
@@ -77,7 +81,6 @@ main {
   display: flex;
   border: 0 solid var(--search-color);
   z-index: 1;
-  /* box-sizing: border-box; */
 }
 
 #search-box > :nth-child(1) > input {
@@ -91,7 +94,7 @@ main {
 }
 
 #clear {
-  visibility: hidden;
+  visibility: visible;
   position: relative;
   margin: auto 0;
   margin-left: calc(-48px * 0.7);
@@ -103,12 +106,13 @@ main {
   background-color: var(--search-color);
   border-radius: var(--search-border-radius);
   height: 100%;
+  padding: auto 1em;
 }
 
 #search-box > :nth-child(2) > p {
   height: min-content;
   font-size: 1.25em;
-  margin: 0 1em;
+  margin: 0;
 }
 
 /* End Search bar */
